--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
           <section id="status" class="status" hidden></section>
 
+          <section id="clock" class="clock" hidden></section>
+
           <section id="current" class="current" hidden></section>
         </div>
 
