--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <meta name="theme-color" content="#f7f9ff" media="(prefers-color-scheme: light)" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-STKTEPYLCX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-STKTEPYLCX');
+    </script>
     <title>Погода на неделю</title>
     <link rel="icon" href="./favicon/favicon.ico" sizes="any" />
     <link rel="icon" href="./favicon/favicon.svg" type="image/svg+xml" />
